--- a/hello-cloud-service.properties
+++ b/hello-cloud-service.properties
@@ -5,6 +5,6 @@ server.port=7979
 management.endpoints.web.exposure.include=*
 
 # the hello-cloud-service will this use this as the greeting that it serves up
-officialGreeting="This is the new greeting !!"
+officialGreeting="This is the new greeting - Thank you for visiting!!"
 
 
