--- a/hello-cloud-service.properties
+++ b/hello-cloud-service.properties
@@ -7,4 +7,8 @@ management.endpoints.web.exposure.include=*
 # the hello-cloud-service will this use this as the greeting that it serves up
 officialGreeting="This is the new greeting - Thank you for visiting!!"
 
+randomGreetingServiceName=random-greeting-service
+serviceProtocol=http://
+servicePath=/greeting
+
 
