--- a/note-service.properties
+++ b/note-service.properties
@@ -1,3 +1,5 @@
+server.port=1984
+
 spring.datasource.url=jdbc:mysql://localhost:3306/note?useSSL=false
 spring.datasourcce.username=root
 spring.datasource.password=rootroot
