--- a/note-service-test.properties
+++ b/note-service-test.properties
@@ -7,4 +7,4 @@ spring.datasource.password=rootroot
 #spring.datasource.driver-class-name=
 
 #jpa properties
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=test
