--- a/note-service-test.properties
+++ b/note-service-test.properties
@@ -1,11 +1,12 @@
 server.port=1984
 
-spring.datasource.url=jdbc:mysql://localhost:3306/note?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/note_test?useSSL=false
 spring.datasourcce.username=root
 spring.datasource.password=rootroot
 
 #spring.datasource.driver-class-name=
 
 #jpa properties
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=test
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
