--- a/note-service-test.properties
+++ b/note-service-test.properties
@@ -8,5 +8,5 @@ spring.datasource.password=rootroot
 
 #jpa properties
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=test
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
