--- a/note-service-test.properties
+++ b/note-service-test.properties
@@ -1,6 +1,6 @@
 server.port=1984
 
-spring.datasource.url=jdbc:mysql://localhost:3306/note_test?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/note_test?useSSL=false&allowPublicKeyRetrieval=true&serverTimeZone=EST
 spring.datasource.username= root
 spring.datasource.password= rootroot
 
