--- a/note-service-test.properties
+++ b/note-service-test.properties
@@ -9,4 +9,4 @@ spring.datasource.password= rootroot
 #jpa properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
